--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 1
-*.exe
+
+### Above combination will ignore all files without extension ###
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
